[package]
name = "async-json-rpc"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/hlb8122/async-json-rpc"
repository = "https://github.com/hlb8122/async-json-rpc"
keywords = ["json", "rpc", "async", "client", "asynchronous"]
description = """
A minimal asynchronous JSON-RPC client library built on the tower framework.
"""

[dependencies]
base64 = "0.12.0"
futures-core = "0.3.4"
futures-util = "0.3.4"
hyper = { version = "0.13.5", features = ["stream"] }
hyper-tls = "0.4.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
tower-service = "0.3.0"
