[package]
name = "async-json-rpc"
version = "0.2.2"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/hlb8122/async-json-rpc"
repository = "https://github.com/hlb8122/async-json-rpc"
keywords = ["json", "rpc", "async", "client", "asynchronous"]
description = """
A minimal asynchronous JSON-RPC client library built on the tower framework.
"""

[dependencies]
base64 = "0.13.0"
futures-core = "0.3.8"
futures-util = "0.3.8"
hyper = { version = "0.14.2", features = ["stream", "tcp", "client", "http1", "http2"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tower-service = "0.3.0"
tower-util = "0.3.1"
